--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<script src='jquery-2.1.0.min.js' type='text/javascript'></script>
+		<script src='jquery-2.1.3.min.js' type='text/javascript'></script>
+		<script src='core.js' type='text/javascript'></script>
 		<script src='popup.js' type='text/javascript'></script>
 		<link href="style.css" rel="stylesheet" type="text/css" media="screen" /> 
 	</head>
