--- a/options.html
+++ b/options.html
@@ -14,6 +14,8 @@
 	  <br />
       <label for="shortcuts">Enable Shortcuts</label>
 	  <input type="checkbox" name="shortcuts" checked>
+	  <br />
+	  <h3>TODO: custom shortcut keys</h3>
     </form>
 	</body>
 </html>
