--- a/popup.html
+++ b/popup.html
@@ -8,5 +8,8 @@
 	<body>
 	<div id='result'><img src="loading.gif" alt="Loading..."></div>
 	<div id='empty'></div>
+	<div>
+		<a href="options.html" target="_blank">Options</a>
+	</div>
 	</body>
 </html>
