--- a/options.html
+++ b/options.html
@@ -30,15 +30,15 @@
 				</div>
 				<div class="shortcutKey">
 					<label for="unreadThread">Next Unread Thread</label>
-					<input type="text" size="1" name="unreadThread" placeholder="u" />
+					<input type="text" size="1" name="unreadThread" placeholder="n" />
 				</div>
 				<div class="shortcutKey">
 					<label for="rateUp">Rate Up</label>
-					<input type="text" size="1" name="rateUp" placeholder="a" />
+					<input type="text" size="1" name="rateUp" placeholder="u" />
 				</div>
 				<div class="shortcutKey">
 					<label for="rateDown">Rate Down</label>
-					<input type="text" size="1" name="rateDown" placeholder="f" />
+					<input type="text" size="1" name="rateDown" placeholder="d" />
 				</div>
 				<div class="shortcutKey">
 					<label for="showHidden">Show Hidden</label>
