--- a/options/options.html
+++ b/options/options.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<script src='jquery-2.1.3.min.js' type='text/javascript'></script>
-		<link href="style.css" rel="stylesheet" type="text/css" media="screen" /> 
+		<script src='/lib/jquery-2.1.3.min.js' type='text/javascript'></script>
+		<link href="/style.css" rel="stylesheet" type="text/css" media="screen" /> 
 	</head>
 	<body>
 		<h1>IvoryTower Checker</h1>
@@ -47,7 +47,7 @@
 			</div>
 		</form>
 		
-		<script src='core.js' type='text/javascript'></script>
-		<script src='options.js' type='text/javascript'></script> 
+		<script src='/scripts/core.js' type='text/javascript'></script>
+		<script src='/options/options.js' type='text/javascript'></script> 
 	</body>
 </html>
