--- a/options/options.html
+++ b/options/options.html
@@ -1,53 +1,72 @@
 <html>
-	<head>
-		<script src='/lib/jquery-2.1.3.min.js' type='text/javascript'></script>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="screen" /> 
-	</head>
-	<body>
-		<h1>IvoryTower Checker</h1>
-		<hr>
-		<h2>Options</h2>
-		<form id="options">
-			<div id="topLevelSettings">
-				<div class="topLevelSetting">
-					<label for="showCohorts">Show Cohort By Users</label>
-					<input type="checkbox" name="showCohorts" />
-				</div>
-				<div class="topLevelSetting">
-					<label for="shortcuts">Enable Shortcuts</label>
-					<input type="checkbox" name="shortcuts" />
-				</div>
+
+<head>
+	<script src='/lib/jquery-2.1.3.min.js' type='text/javascript'></script>
+	<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
+</head>
+
+<body>
+	<h1>IvoryTower Checker</h1>
+	<hr>
+	<h2>Options</h2>
+	<form id="options">
+		<div id="topLevelSettings">
+			<div class="topLevelSetting">
+				<label for="unreadCheckerInterval">Unread Count Interval (minutes)</label>
+				<input class="smallNumInput" type="number" name="unreadCheckerInterval" placeholder="5" />
 			</div>
-			<div id="shortcutSection">
-				<h3>Customize Shortcut Keys</h3>
-				<div class="shortcutKey">
-					<label for="nextPost">Next Post</label>
-					<input type="text" size="1" name="nextPost" placeholder="j" />
-				</div>
-				<div class="shortcutKey">
-					<label for="previousPost">Previous Post</label>
-					<input type="text" size="1" name="previousPost" placeholder="k" />
-				</div>
-				<div class="shortcutKey">
-					<label for="unreadThread">Next Unread Thread</label>
-					<input type="text" size="1" name="unreadThread" placeholder="n" />
-				</div>
-				<div class="shortcutKey">
-					<label for="rateUp">Rate Up</label>
-					<input type="text" size="1" name="rateUp" placeholder="u" />
-				</div>
-				<div class="shortcutKey">
-					<label for="rateDown">Rate Down</label>
-					<input type="text" size="1" name="rateDown" placeholder="d" />
-				</div>
-				<div class="shortcutKey">
-					<label for="showHidden">Show Hidden</label>
-					<input type="text" size="1" name="showHidden" placeholder="h" />
-				</div>
+			<div class="topLevelSetting">
+				<label for="showCohorts">Show Cohort By Users</label>
+				<input type="checkbox" name="showCohorts" />
 			</div>
-		</form>
-		
-		<script src='/scripts/core.js' type='text/javascript'></script>
-		<script src='/options/options.js' type='text/javascript'></script> 
-	</body>
+			<div class="topLevelSetting">
+				<label for="shortcuts">Enable Shortcuts</label>
+				<input type="checkbox" name="shortcuts" />
+			</div>
+		</div>
+		<div id="shortcutSection">
+			<h3>Customize Shortcut Keys</h3>
+			<div class="shortcutKey">
+				<label for="nextPost">Next Post</label>
+				<input type="text" size="1" name="nextPost" placeholder="j" />
+			</div>
+			<div class="shortcutKey">
+				<label for="previousPost">Previous Post</label>
+				<input type="text" size="1" name="previousPost" placeholder="k" />
+			</div>
+			<div class="shortcutKey">
+				<label for="unreadThread">Next Unread Thread</label>
+				<input type="text" size="1" name="unreadThread" placeholder="n" />
+			</div>
+			<div class="shortcutKey">
+				<label for="rateUp">Rate Up</label>
+				<input type="text" size="1" name="rateUp" placeholder="u" />
+			</div>
+			<div class="shortcutKey">
+				<label for="rateUp">Undo Rating</label>
+				<input type="text" size="1" name="unRate" placeholder="z" />
+			</div>
+			<div class="shortcutKey">
+				<label for="rateDown">Rate Down</label>
+				<input type="text" size="1" name="rateDown" placeholder="d" />
+			</div>
+			<div class="shortcutKey">
+				<label for="flagPost">Flag Post</label>
+				<input type="text" size="1" name="flagPost" placeholder="f" />
+			</div>
+			<div class="shortcutKey">
+				<label for="replyToPost">Rate Down</label>
+				<input type="text" size="1" name="replyToPost" placeholder="r" />
+			</div>
+			<div class="shortcutKey">
+				<label for="showHidden">Show Hidden</label>
+				<input type="text" size="1" name="showHidden" placeholder="h" />
+			</div>
+		</div>
+	</form>
+
+	<script src='/scripts/core.js' type='text/javascript'></script>
+	<script src='/options/options.js' type='text/javascript'></script>
+</body>
+
 </html>
