--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,12 +1,16 @@
 <html>
-	<head>
-		<script src='/lib/jquery-2.1.3.min.js' type='text/javascript'></script>
-		<script src='/scripts/core.js' type='text/javascript'></script>
-		<script src='/popup/popup.js' type='text/javascript'></script>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="screen" /> 
-	</head>
-	<body>
+
+<head>
+	<script src='/lib/jquery-2.1.3.min.js' type='text/javascript'></script>
+	<script src='/scripts/core.js' type='text/javascript'></script>
+	<script src='/popup/popup.js' type='text/javascript'></script>
+	<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
+</head>
+
+<body>
 	<div id='result'><img src="/assets/loading.gif" alt="Loading..."></div>
 	<div id='empty'></div>
-	</body>
+	<div><a target="_blank" href='/options/options.html'>View Options Page</a></div>
+</body>
+
 </html>
