--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,12 +1,34 @@
 <html>
-	<head>
-		<script src='/lib/jquery-2.1.3.min.js' type='text/javascript'></script>
-		<script src='/scripts/core.js' type='text/javascript'></script>
-		<script src='/popup/popup.js' type='text/javascript'></script>
-		<link href="/style.css" rel="stylesheet" type="text/css" media="screen" /> 
-	</head>
-	<body>
-	<div id='result'><img src="/assets/loading.gif" alt="Loading..."></div>
+
+<head>
+	<script src='/lib/jquery-2.1.3.min.js' type='text/javascript'></script>
+	<script src='/scripts/core.js' type='text/javascript'></script>
+	<script src='/popup/popup.js' type='text/javascript'></script>
+	<link href="/style.css" rel="stylesheet" type="text/css" media="screen" />
+</head>
+
+<body>
+	<div id='loadingGif'>
+		<img src="/assets/loading.gif" alt="Loading...">
+	</div>
+	<div id='result'>
+	</div>
 	<div id='empty'></div>
-	</body>
+	<div id='ITTodayParent'>
+		<div><a href='#' id='ITToday'>Go to IvoryTower Today</a></div>
+	</div>
+	<div id='signInParent' style="display:none;">
+		You must <a href='#' id='signIn'>log in</a> to IvoryTower first!
+	</div>
+	<div id='unreadThreadParent' style="display:none;">
+		First Unread Thread:<br />
+		<a href='#' id='readThread'></a>
+		<br />
+		<span id='skipThread'>Mark as read</span>
+	</div>
+	<div>
+		<a target="_blank" href='/options/options.html'>View Options Page</a>
+	</div>
+</body>
+
 </html>
